# FFmpegAndroid

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
ffmpegandroidaddmusic/: build.gradle
ffmpegandroidaddmusic/libs/include/libavformat/: avformat.h
ffmpegandroidaddmusic/src/main/: AndroidManifest.xml
ffmpegandroidaddmusic/src/main/cpp/: native-lib.cpp
ffmpegandroidaddmusic/src/main/res/layout/: activity_main.xml
ffmpegandroidavfilter/: CMakeLists.txt  build.gradle
ffmpegandroidavfilter/libs/include/libavcodec/: avcodec.h
ffmpegandroidavfilter/src/main/: AndroidManifest.xml
ffmpegandroidavfilter/src/main/cpp/: native-lib.cpp  native-lib.h
ffmpegandroidcameraencoder/: build.gradle
ffmpegandroidcameraencoder/libs/armeabi-v7a/pkgconfig/: libavutil.pc
ffmpegandroidcameraencoder/src/main/: AndroidManifest.xml
ffmpegandroidcameraencoder/src/main/cpp/: native-lib.cpp  native-lib.h
ffmpegandroidcameralive/: build.gradle
ffmpegandroidcameralive/libs/: CMakeLists.txt
ffmpegandroidcameralive/src/main/: AndroidManifest.xml
ffmpegandroidcameralive/src/main/cpp/: native-lib.cpp  native-lib.h
ffmpegandroiddecoder/: CMakeLists.txt  build.gradle
ffmpegandroiddecoder/libs/armeabi-v7a/pkgconfig/: libavfilter.pc  libswresample.pc
ffmpegandroiddecoder/src/androidTest/java/com/ws/ffmpegandroiddecoder/: ExampleInstrumentedTest.java
ffmpegandroiddecoder/src/main/: AndroidManifest.xml
ffmpegandroiddecoder/src/main/cpp/: native-lib.cpp
ffmpegandroiddecoder/src/main/java/com/ws/ffmpegandroiddecoder/: MainActivity.java
ffmpegandroiddecoder/src/main/res/layout/: activity_main.xml
ffmpegandroiddecoder/src/main/res/values/: strings.xml
ffmpegandroiddecoder/src/test/java/com/ws/ffmpegandroiddecoder/: ExampleUnitTest.java
ffmpegandroidplayer/: build.gradle  proguard-rules.pro
ffmpegandroidplayer/libs/armeabi-v7a/pkgconfig/: libavformat.pc
ffmpegandroidplayer/src/main/: AndroidManifest.xml
ffmpegandroidplayer/src/main/cpp/: native-lib.cpp
ffmpegandroidwallpaper/: build.gradle
ffmpegandroidwallpaper/libs/armeabi-v7a/pkgconfig/: libavcodec.pc  libswscale.pc
ffmpegandroidwallpaper/src/main/: AndroidManifest.xml
ffmpegandroidwallpaper/src/main/cpp/: native-lib.cpp
(+36 files in other folders)
